--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/visaServi/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="/visaServi/assets/index.b5dbf7b9.js"></script>
-    <link rel="stylesheet" href="/visaServi/assets/index.77e1e72b.css">
+    <meta name="description"
+    content="New Website" 
+    data-rh="true"/>
+    <link rel="shortcut icon" type="image/ico" href="/visaServi/assets/favicon.1a34ebea.ico"/>
+    <script type="module" crossorigin src="/visaServi/assets/index.19690e7e.js"></script>
+    <link rel="stylesheet" href="/visaServi/assets/index.5dcc8048.css">
   </head>
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
