--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <title>VisaServi | Servicio de visados nacionales e internacionales</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-    content="New Website" 
+    content="VisaServi te brinda una atención personalizada con toda la información y asesoría necesaria para su trámite migratorio, reserva de paquetes turísticos o traducciones." 
     data-rh="true"/>
     <link rel="shortcut icon" type="image/ico" href="./src/assets/favicon.ico"/>
   </head>
